--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "jshint": "^2.9.2"
   },
   "devDependencies": {
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "merge-stream": "^1.0.0"
   },
   "scripts": {
+    "postinstall": "./node_modules/.bin/gulp",
     "start": "node_modules/.bin/http-server"
   }
 }
