--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "jshint": "^2.9.2"
   },
   "devDependencies": {
+    "gulp-angular-embed-templates": "^2.2.0",
+    "gulp-order": "^1.1.1",
     "http-server": "^0.9.0",
     "merge-stream": "^1.0.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/gulp",
+    "postinstall": "./node_modules/.bin/bower update && ./node_modules/.bin/gulp",
     "start": "node_modules/.bin/http-server"
   }
 }
