--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "gulp-angular-embed-templates": "^2.2.0",
     "gulp-order": "^1.1.1",
+    "gulp-sourcemaps": "^1.6.0",
     "http-server": "^0.9.0",
     "merge-stream": "^1.0.0"
   },
